chore(CI): add specific CI test

--- a/package.json
+++ b/package.json
@@ -58,9 +58,14 @@
     "lint": "eslint src/",
     "examples": "node scripts/build-examples.js basic,vertical-pan,recognizeWith,quadruple-tap,recognizeWith-requireFailure-taps",
     "test-browser": "testem",
-    "pretest-browser": "browserify test/index.js -t babelify -o test/page/tests-bundle.js",
-    "posttest-browser": "rm test/page/tests-bundle.js",
-    "test": "npm run lint && npm run test-browser",
+    "pretest-browser": "npm run build-test",
+    "posttest-browser": "npm run clean-test",
+    "build-test": "browserify test/index.js -t babelify -o test/page/tests-bundle.js",
+    "clean-test": "rm test/page/tests-bundle.js",
+    "test-ci": "testem ci",
+    "pretest-ci": "npm run build-test",
+    "posttest-ci": "npm run clean-test",
+    "test": "npm run lint && npm run test-ci",
     "deps": "npm install && validate-commit-msg",
     "start": "npm run deps",
     "browserify": "browserify src/cycle-hammer.js -t babelify -t browserify-shim --standalone CycleHammer --exclude rx --outfile dist/cycle-hammer.js",
